@@ -85,6 +85,7 @@
 	  incoming connection
 	* added more detailed instrumentation of the disk I/O thread
 
+	* fixed reconnect delay when leaving upload only mode
 	* fixed default values being set incorrectly in add_torrent_params through add_magnet_uri in python bindings
 	* implemented unaligned write (for unbuffered I/O)
 	* fixed broadcast_lsd option
